@@ -95,6 +95,7 @@ wxWinCE:
 - Backported wxCheckListBox implementation from 2.7.
 - Added support for the context menu event (wxContextMenuEvent)
   and added platform-specific wxWindow::EnableContextMenu.
+- Fixed wxGenericFileDialog to work with WinCE.
 
 wxMac:
 
